[gd_scene load_steps=5 format=3 uid="uid://bklsq5dgkbhdd"]

[ext_resource type="Theme" uid="uid://myuj1yo75kir" path="res://assets/ui_theme.tres" id="1_pjlg7"]
[ext_resource type="Script" uid="uid://r6clwd7knbgs" path="res://scenes/UI/custom_button.gd" id="2_a3b55"]
[ext_resource type="Shader" uid="uid://b2bye2xne3t0d" path="res://scenes/UI/blur_shader.gdshader" id="3_a3b55"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ytfc3"]
shader = ExtResource("3_a3b55")
shader_parameter/blur_amount = 0.988
shader_parameter/mix_amount = 0.0
shader_parameter/color_over = Color(0, 0, 0, 1)

[node name="custom_button" type="Button"]
offset_right = 145.0
offset_bottom = 39.0
focus_mode = 0
theme = ExtResource("1_pjlg7")
text = "Button"
script = ExtResource("2_a3b55")

[node name="blur_bg" type="ColorRect" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_ytfc3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
